--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>e-comm travel</title>
-    <link rel="stylesheet" href="assets/style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="assets/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="main-container">
+      <div class="main-background">
+        <header>
+          <div class="left-side">
+            <img src="./assets/images/logo.svg" alt="logo" />
+          </div>
+          <div class="middle">
+            <ul>
+              <li>Home</li>
+              <li>Hotels</li>
+              <li>Restourants</li>
+              <li>Tours</li>
+              <li>Destinations</li>
+              <li>Activities</li>
+              <li>Contact</li>
+            </ul>
+          </div>
+          <div class="right-side">
+            <div class="text">
+              <p>Holla,</p>
+              <p class="semibold">Ales Nesetril</p>
+            </div>
+            <div class="profile-photo">
+              <img
+                src="./assets/images/circle-red.svg"
+                alt="circle"
+                class="circle"
+              />
+              <img
+                src="./assets/images/profile-picture.svg"
+                alt="profile"
+                class="photo"
+              />
+            </div>
+          </div>
+        </header>
+        <div class="hero-section">
+          <div class="hero-title">Discover the most engaging places</div>
+          <div class="button-container">
+            <button><img src="./assets/images/global.svg" alt="global">Discover on 3D Globe</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
