--- a/index.html
+++ b/index.html
@@ -48,12 +48,135 @@
           </div>
         </header>
         <div class="hero-section">
-          <div class="hero-title">Discover the most engaging places</div>
-          <div class="button-container">
-            <button><img src="./assets/images/global.svg" alt="global">Discover on 3D Globe</button>
+          <div class="hero-title">
+            <h1>Discover the most engaging places</h1>
+          </div>
+          <button class="hero-button semibold">
+            <img src="./assets/images/global.svg" alt="global" />Discover on 3D
+            Globe
+          </button>
+          <div class="hero-search">
+            <div class="search-location">
+              <div class="left-side">
+                <img src="./assets/images/icons/location.svg" alt="location" />
+              </div>
+              <div class="right-side">
+                <p class="p-300">Location</p>
+                <p class="p-500">Explore nearby destinations</p>
+              </div>
+            </div>
+            <div class="search-activity">
+              <div class="left-side">
+                <img src="./assets/images/icons/ride.svg" alt="ride" />
+              </div>
+              <div class="right-side">
+                <p class="p-300">Activity</p>
+                <p class="p-500">All Activities</p>
+              </div>
+            </div>
+            <div class="search-date">
+              <div class="left-side">
+                <img src="./assets/images/icons/date.svg" alt="date" />
+              </div>
+              <div class="right-side">
+                <p class="p-300">When</p>
+                <p class="p-500">Choose a Date</p>
+              </div>
+            </div>
+            <div class="search-guests">
+              <div class="left-side">
+                <img src="./assets/images/icons/group.svg" alt="date" />
+              </div>
+              <div class="right-side">
+                <p class="p-300">Guests</p>
+                <p class="p-500">1 guest</p>
+              </div>
+            </div>
+            <button class="search-button">
+              <img src="/assets/images/icons/seacrh.svg" alt="seacrh" />
+            </button>
           </div>
         </div>
       </div>
+      <main>
+        <div class="popular-destinations">
+          <h2>Popular Destinations</h2>
+          <div class="popular-cards cards">
+            <div class="card">
+              <div class="top">
+                <img src="./assets/images/popular-card/img-1.svg" alt="" />
+              </div>
+              <div class="bottom">
+                <p class="p-500">Big Sur</p>
+                <p class="p-400">California, USA</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="top">
+                <img src="./assets/images/popular-card/img-2.svg" alt="" />
+              </div>
+              <div class="bottom">
+                <p class="p-500">Prescott</p>
+                <p class="p-400">Arizona, USA</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="top">
+                <img src="./assets/images/popular-card/img-3.svg" alt="" />
+              </div>
+              <div class="bottom">
+                <p class="p-500">Fort Mayers</p>
+                <p class="p-400">Florida, USA</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="top">
+                <img src="./assets/images/popular-card/img-4.svg" alt="" />
+              </div>
+              <div class="bottom">
+                <p class="p-500">Tucson</p>
+                <p class="p-400">Arizona, USA</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="top">
+                <img src="./assets/images/popular-card/img-5.svg" alt="" />
+              </div>
+              <div class="bottom">
+                <p class="p-500">St. Joseph</p>
+                <p class="p-400">Michigan, USA</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="top">
+                <img src="./assets/images/popular-card/img-6.svg" alt="" />
+              </div>
+              <div class="bottom">
+                <p class="p-500">Madrid</p>
+                <p class="p-400">Spain</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hotels-restaurants">
+          <h2>Hotels and Restaurants</h2>
+          <button class="view">
+            View all
+            <img src="./assets/images/icons/arrow-right-line.svg" alt="" />
+          </button>
+          <div class="hotels-cards cards">
+            <div class="card">
+              <div class="top">
+                <img src="" alt="" />
+              </div>
+              <div class="bottom">
+                <p class="p-500">Monastero Santa Rosa Hotel & Spa</p>
+                <p class="p-300">Salerno, Italy</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
