--- a/index.html
+++ b/index.html
@@ -159,19 +159,97 @@
           </div>
         </div>
         <div class="hotels-restaurants">
-          <h2>Hotels and Restaurants</h2>
-          <button class="view">
-            View all
-            <img src="./assets/images/icons/arrow-right-line.svg" alt="" />
-          </button>
+          <div class="title">
+            <h2>Hotels and Restaurants</h2>
+            <button class="view">
+              View all
+              <img src="./assets/images/icons/arrow-right-line.svg" alt="" />
+            </button>
+          </div>
+
           <div class="hotels-cards cards">
             <div class="card">
               <div class="top">
-                <img src="" alt="" />
+                <img src="./assets/images/hotels/Frame 3 (1).svg" alt="" />
+              </div>
+              <div class="bottom">
+                <p class="p-500">Grand Hotel Tremezzo</p>
+                <div class="d-flex">
+                  <div class="location">
+                    <img src="./assets/images/icons/map-pin-line.svg" alt="" />
+                    <p class="p-300">Lake Como, Italy</p>
+                  </div>
+                  <div class="rating">
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="top">
+                <img src="./assets/images/hotels/Frame 3 (3).svg" alt="" />
+              </div>
+              <div class="bottom">
+                <p class="p-500">The Oberoi Udaivilas, Udaipur</p>
+                <div class="d-flex">
+                  <div class="location">
+                    <img src="./assets/images/icons/map-pin-line.svg" alt="" />
+                    <p class="p-300">Udaipur, India</p>
+                  </div>
+                  <div class="rating">
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-empty.svg" alt="" />
+                    <img src="./assets/images/icons/star-empty.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="top">
+                <img src="./assets/images/hotels/Frame 3 (2).svg" alt="" />
               </div>
               <div class="bottom">
                 <p class="p-500">Monastero Santa Rosa Hotel & Spa</p>
-                <p class="p-300">Salerno, Italy</p>
+                <div class="d-flex">
+                  <div class="location">
+                    <img src="./assets/images/icons/map-pin-line.svg" alt="" />
+                    <p class="p-300">Salerno, Italy</p>
+                  </div>
+                  <div class="rating">
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-empty.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="top">
+                <img src="./assets/images/hotels/Frame 3 (4).svg" alt="" />
+              </div>
+              <div class="bottom">
+                <p class="p-500">Monastero Santa Rosa Hotel & Spa</p>
+                <div class="d-flex">
+                  <div class="location">
+                    <img src="./assets/images/icons/map-pin-line.svg" alt="" />
+                    <p class="p-300">Salerno, Italy</p>
+                  </div>
+                  <div class="rating">
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-full.svg" alt="" />
+                    <img src="./assets/images/icons/star-empty.svg" alt="" />
+                    <img src="./assets/images/icons/star-empty.svg" alt="" />
+                  </div>
+                </div>
               </div>
             </div>
           </div>
