--- a/index.html
+++ b/index.html
@@ -254,6 +254,86 @@
             </div>
           </div>
         </div>
+        <div class="travel-tips">
+          <div class="title">
+            <h2>Travel Tips and Advice</h2>
+            <button class="view">
+              View all
+              <img src="./assets/images/icons/arrow-right-line.svg" alt="" />
+            </button>
+          </div>
+          <div class="blog-container">
+            <div class="blog">
+              <div class="left-side">
+                <img src="./assets/images/travel/img.svg" alt="" />
+              </div>
+              <div class="right-side">
+                <div class="top">
+                  <h3 class="h3-600">East Village Ice Cream Crawl</h3>
+                  <p class="p-400">
+                    We will stop at five different world-class ice cream shops
+                    on this 1.5 mile 1.5 hour tour. At each ice cream store
+                    we'll explore the story behind the business and see what
+                    makes the ice cream unique as you savor every…
+                  </p>
+                </div>
+                <div class="bottom">
+                  <div class="date">
+                    <img src="./assets/images/icons/date-grey.svg" alt="" />
+                    <span class="span-400">Today</span>
+                  </div>
+                  <div class="person">
+                    <img src="./assets/images/icons/person.svg" alt="" />
+                    <span class="span-400">Maria Philips</span>
+                  </div>
+                  <div class="comments">
+                    <div class="img">
+                      <img
+                        src="./assets/images/icons/communication.svg"
+                        alt=""
+                      />
+                      <span class="span-400">2</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog">
+              <div class="left-side">
+                <img src="./assets/images/travel/img (1).svg" alt="" />
+              </div>
+              <div class="right-side">
+                <div class="top">
+                  <h3 class="h3-600">Brooklyn Bridge cinematic photo walk</h3>
+                  <p class="p-400">
+                    This experience takes place at the Brooklyn Bridge Park and
+                    Brooklyn Bridge, but I’m always open to capture clients at
+                    different locations upon request for an additional charge.
+                  </p>
+                </div>
+                <div class="bottom">
+                  <div class="date">
+                    <img src="./assets/images/icons/date-grey.svg" alt="" />
+                    <span class="span-400">Today</span>
+                  </div>
+                  <div class="person">
+                    <img src="./assets/images/icons/person.svg" alt="" />
+                    <span class="span-400">James Calzoni</span>
+                  </div>
+                  <div class="comments">
+                    <div class="img">
+                      <img
+                        src="./assets/images/icons/communication.svg"
+                        alt=""
+                      />
+                      <span class="span-400">27</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
   </body>
