--- a/index.html
+++ b/index.html
@@ -334,7 +334,99 @@
             </div>
           </div>
         </div>
+        <div class="activities">
+          <div class="title">
+            <h2>Activities</h2>
+            <button class="view">
+              View all
+              <img src="./assets/images/icons/arrow-right-line.svg" alt="" />
+            </button>
+          </div>
+          <div class="cards">
+            <div class="card">
+              <img src="./assets/images/active/img.svg" alt="" />
+              <p class="p-500">Sailing</p>
+            </div>
+            <div class="card">
+              <img src="./assets/images/active/img-1.svg" alt="" />
+              <p class="p-500">Climbing</p>
+            </div>
+            <div class="card">
+              <img src="./assets/images/active/img-2.svg" alt="" />
+              <p class="p-500">Skiing</p>
+            </div>
+            <div class="card">
+              <img src="./assets/images/active/img-3.svg" alt="" />
+              <p class="p-500">Hiking</p>
+            </div>
+          </div>
+        </div>
+        <div class="about-section">
+          <div class="left-side">
+            <h2>About Us</h2>
+            <p class="p-400">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse a sapien justo. Nulla facilisis tristique imperdiet.
+              Nullam a placerat odio. Sed in ex augue. Aliquam porta consectetur
+              lorem sit amet ultrices. Class aptent taciti sociosqu ad litora
+              torquent per conubia nostra, per inceptos himenaeos.
+            </p>
+            <button class="view">
+              Read more
+              <img src="./assets/images/icons/arrow-right-line.svg" alt="" />
+            </button>
+          </div>
+          <div class="right-side">
+            <img src="./assets/images/about/image 23.svg" alt="" />
+          </div>
+        </div>
       </main>
+      <footer>
+        <div class="footer-content">
+          <div class="footer-brand">
+            <img
+              src="./assets/images/logo2.svg"
+              alt="2rism Logo"
+              class="footer-logo"
+            />
+            <p class="p-400">
+              We always make our customers happy by providing as many choices as
+              possible.
+            </p>
+            <div class="footer-social-media">
+              <a href="#" class="social-link">
+                <img
+                  src="./assets/images/icons/socialmedia/Group.svg"
+                  alt="Facebook"
+                />
+              </a>
+              <a href="#" class="social-link">
+                <img
+                  src="./assets/images/icons/socialmedia/twitter-fill.svg"
+                  alt="Twitter"
+                />
+              </a>
+              <a href="#" class="social-link">
+                <img
+                  src="./assets/images/icons/socialmedia/instagram-fill.svg"
+                  alt="Instagram"
+                />
+              </a>
+            </div>
+          </div>
+          <div class="footer-links">
+            <!-- Навигационные ссылки -->
+            <div class="footer-column">
+              <h3 class="footer-heading">About</h3>
+              <ul class="footer-menu">
+                <li><a href="#" class="footer-link">About Us</a></li>
+                <li><a href="#" class="footer-link">Features</a></li>
+                <li><a href="#" class="footer-link">Menu</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
