--- a/index.html
+++ b/index.html
@@ -415,15 +415,47 @@
             </div>
           </div>
           <div class="footer-links">
-            <!-- Навигационные ссылки -->
             <div class="footer-column">
-              <h3 class="footer-heading">About</h3>
+              <h3 class="footer-heading p-500">About</h3>
               <ul class="footer-menu">
                 <li><a href="#" class="footer-link">About Us</a></li>
                 <li><a href="#" class="footer-link">Features</a></li>
                 <li><a href="#" class="footer-link">Menu</a></li>
               </ul>
             </div>
+            <div class="footer-column">
+              <h3 class="footer-heading p-500">Company</h3>
+              <ul class="footer-menu">
+                <li><a href="#" class="footer-link">Why 2rism</a></li>
+                <li><a href="#" class="footer-link">Partner With Us</a></li>
+                <li><a href="#" class="footer-link">FAQ</a></li>
+                <li><a href="#" class="footer-link">Blog</a></li>
+              </ul>
+            </div>
+
+            <div class="footer-column">
+              <h3 class="footer-heading p-500">Support</h3>
+              <ul class="footer-menu">
+                <li><a href="#" class="footer-link">Account</a></li>
+                <li><a href="#" class="footer-link">Support Center</a></li>
+                <li><a href="#" class="footer-link">Feedback</a></li>
+                <li><a href="#" class="footer-link">Contact Us</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer-subscribe">
+            <h3 class="subscribe-heading p-500">
+              Subscribe on our destination review newsletters
+            </h3>
+            <form class="subscribe-form">
+              <input
+                type="email"
+                class="subscribe-input"
+                placeholder="Your email"
+              />
+              <button type="submit" class="subscribe-button">→</button>
+            </form>
           </div>
         </div>
       </footer>
