--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
               <ul class="footer-menu">
                 <li><a href="#" class="footer-link">About Us</a></li>
                 <li><a href="#" class="footer-link">Features</a></li>
+                <li><a href="#" class="footer-link">News</a></li>
                 <li><a href="#" class="footer-link">Menu</a></li>
               </ul>
             </div>
@@ -448,14 +449,19 @@
             <h3 class="subscribe-heading p-500">
               Subscribe on our destination review newsletters
             </h3>
-            <form class="subscribe-form">
-              <input
-                type="email"
-                class="subscribe-input"
-                placeholder="Your email"
-              />
-              <button type="submit" class="subscribe-button">→</button>
-            </form>
+            <div class="subscribe">
+              <form class="subscribe-form">
+                <img src="./assets/images/icons/email.svg" alt="" />
+                <input
+                  type="email"
+                  class="subscribe-input"
+                  placeholder="Your email"
+                />
+              </form>
+              <button type="submit" class="subscribe-button">
+                <img src="./assets/images/icons/submit.svg" alt="" />
+              </button>
+            </div>
           </div>
         </div>
       </footer>
