Added animation & Removed some sections. Added table

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>e-comm travel</title>
     <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="./assets/media.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
       rel="stylesheet"
@@ -55,6 +56,12 @@
             <img src="./assets/images/global.svg" alt="global" />Discover on 3D
             Globe
           </button>
+          <div class="animation">
+            <img
+              src="/assets/images/anim-img/airplane_1-removebg-preview 1 (1).svg"
+              alt=""
+            />
+          </div>
           <div class="hero-search">
             <div class="search-location">
               <div class="left-side">
@@ -158,179 +165,54 @@
             </div>
           </div>
         </div>
-        <div class="hotels-restaurants">
+        <div class="popular-places">
           <div class="title">
-            <h2>Hotels and Restaurants</h2>
+            <h2>Most Popular Places</h2>
             <button class="view">
               View all
               <img src="./assets/images/icons/arrow-right-line.svg" alt="" />
             </button>
           </div>
-
-          <div class="hotels-cards cards">
-            <div class="card">
-              <div class="top">
-                <img src="./assets/images/hotels/Frame 3 (1).svg" alt="" />
-              </div>
-              <div class="bottom">
-                <p class="p-500">Grand Hotel Tremezzo</p>
-                <div class="d-flex">
-                  <div class="location">
-                    <img src="./assets/images/icons/map-pin-line.svg" alt="" />
-                    <p class="p-300">Lake Como, Italy</p>
-                  </div>
-                  <div class="rating">
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                  </div>
-                </div>
-              </div>
+          <div class="content">
+            <div class="left-side">
+              <video
+                src="./video/Water Activities   Taiwan Tourism Video 30 seconds.mp4"
+                autoplay
+                controls
+                muted
+                loop
+              ></video>
             </div>
-            <div class="card">
-              <div class="top">
-                <img src="./assets/images/hotels/Frame 3 (3).svg" alt="" />
-              </div>
-              <div class="bottom">
-                <p class="p-500">The Oberoi Udaivilas, Udaipur</p>
-                <div class="d-flex">
-                  <div class="location">
-                    <img src="./assets/images/icons/map-pin-line.svg" alt="" />
-                    <p class="p-300">Udaipur, India</p>
-                  </div>
-                  <div class="rating">
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-empty.svg" alt="" />
-                    <img src="./assets/images/icons/star-empty.svg" alt="" />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="top">
-                <img src="./assets/images/hotels/Frame 3 (2).svg" alt="" />
-              </div>
-              <div class="bottom">
-                <p class="p-500">Monastero Santa Rosa Hotel & Spa</p>
-                <div class="d-flex">
-                  <div class="location">
-                    <img src="./assets/images/icons/map-pin-line.svg" alt="" />
-                    <p class="p-300">Salerno, Italy</p>
-                  </div>
-                  <div class="rating">
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-empty.svg" alt="" />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="top">
-                <img src="./assets/images/hotels/Frame 3 (4).svg" alt="" />
-              </div>
-              <div class="bottom">
-                <p class="p-500">Monastero Santa Rosa Hotel & Spa</p>
-                <div class="d-flex">
-                  <div class="location">
-                    <img src="./assets/images/icons/map-pin-line.svg" alt="" />
-                    <p class="p-300">Salerno, Italy</p>
-                  </div>
-                  <div class="rating">
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-full.svg" alt="" />
-                    <img src="./assets/images/icons/star-empty.svg" alt="" />
-                    <img src="./assets/images/icons/star-empty.svg" alt="" />
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="travel-tips">
-          <div class="title">
-            <h2>Travel Tips and Advice</h2>
-            <button class="view">
-              View all
-              <img src="./assets/images/icons/arrow-right-line.svg" alt="" />
-            </button>
-          </div>
-          <div class="blog-container">
-            <div class="blog">
-              <div class="left-side">
-                <img src="./assets/images/travel/img.svg" alt="" />
-              </div>
-              <div class="right-side">
-                <div class="top">
-                  <h3 class="h3-600">East Village Ice Cream Crawl</h3>
-                  <p class="p-400">
-                    We will stop at five different world-class ice cream shops
-                    on this 1.5 mile 1.5 hour tour. At each ice cream store
-                    we'll explore the story behind the business and see what
-                    makes the ice cream unique as you savor every…
-                  </p>
-                </div>
-                <div class="bottom">
-                  <div class="date">
-                    <img src="./assets/images/icons/date-grey.svg" alt="" />
-                    <span class="span-400">Today</span>
-                  </div>
-                  <div class="person">
-                    <img src="./assets/images/icons/person.svg" alt="" />
-                    <span class="span-400">Maria Philips</span>
-                  </div>
-                  <div class="comments">
-                    <div class="img">
-                      <img
-                        src="./assets/images/icons/communication.svg"
-                        alt=""
-                      />
-                      <span class="span-400">2</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="blog">
-              <div class="left-side">
-                <img src="./assets/images/travel/img (1).svg" alt="" />
-              </div>
-              <div class="right-side">
-                <div class="top">
-                  <h3 class="h3-600">Brooklyn Bridge cinematic photo walk</h3>
-                  <p class="p-400">
-                    This experience takes place at the Brooklyn Bridge Park and
-                    Brooklyn Bridge, but I’m always open to capture clients at
-                    different locations upon request for an additional charge.
-                  </p>
-                </div>
-                <div class="bottom">
-                  <div class="date">
-                    <img src="./assets/images/icons/date-grey.svg" alt="" />
-                    <span class="span-400">Today</span>
-                  </div>
-                  <div class="person">
-                    <img src="./assets/images/icons/person.svg" alt="" />
-                    <span class="span-400">James Calzoni</span>
-                  </div>
-                  <div class="comments">
-                    <div class="img">
-                      <img
-                        src="./assets/images/icons/communication.svg"
-                        alt=""
-                      />
-                      <span class="span-400">27</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
+            <div class="right-side">
+              <table>
+                <th>Country</th>
+                <th>Location</th>
+                <th>Visitors</th>
+                <tr>
+                  <td rowspan="2">Italy</td>
+                  <td class=>Salerno</td>
+                  <td>125.000</td>
+                </tr>
+                <tr>
+                  <td class="n-border">Lake Como</td>
+                  <td class="n-border">85000</td>
+                </tr>
+                <tr>
+                  <td>India</td>
+                  <td>Udaipur</td>
+                  <td>100.000</td>
+                </tr>
+                <tr>
+                  <td>Unaited State</td>
+                  <td>Los Angeles</td>
+                  <td>80.000</td>
+                </tr>
+                <tr>
+                  <td colspan="row"><b>TOTAL:</b></td>
+                  <td></td>
+                  <td><b>390.000</b></td>
+                </tr>
+              </table>
             </div>
           </div>
         </div>
@@ -433,7 +315,6 @@
                 <li><a href="#" class="footer-link">Blog</a></li>
               </ul>
             </div>
-
             <div class="footer-column">
               <h3 class="footer-heading p-500">Support</h3>
               <ul class="footer-menu">
@@ -444,7 +325,6 @@
               </ul>
             </div>
           </div>
-
           <div class="footer-subscribe">
             <h3 class="subscribe-heading p-500">
               Subscribe on our destination review newsletters
