--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                 class="photo"
               />
             </div>
+            <img
+              class="menu-icon d-none"
+              src="./assets/images/icons/menu_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg"
+              alt=""
+            />
           </div>
         </header>
         <div class="hero-section">
@@ -185,17 +190,19 @@
             </div>
             <div class="right-side">
               <table>
-                <th>Country</th>
-                <th>Location</th>
-                <th>Visitors</th>
+                <tr>
+                  <th>Country</th>
+                  <th>Location</th>
+                  <th>Visitors</th>
+                </tr>
                 <tr>
                   <td rowspan="2">Italy</td>
-                  <td class=>Salerno</td>
+                  <td>Salerno</td>
                   <td>125.000</td>
                 </tr>
                 <tr>
-                  <td class="n-border">Lake Como</td>
-                  <td class="n-border">85000</td>
+                  <td>Lake Como</td>
+                  <td>85.000</td>
                 </tr>
                 <tr>
                   <td>India</td>
@@ -203,13 +210,12 @@
                   <td>100.000</td>
                 </tr>
                 <tr>
-                  <td>Unaited State</td>
+                  <td>United States</td>
                   <td>Los Angeles</td>
                   <td>80.000</td>
                 </tr>
                 <tr>
-                  <td colspan="row"><b>TOTAL:</b></td>
-                  <td></td>
+                  <td colspan="2"><b>TOTAL:</b></td>
                   <td><b>390.000</b></td>
                 </tr>
               </table>
