--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                   <td>125.000</td>
                 </tr>
                 <tr>
-                  <td>Lake Como</td>
-                  <td>85.000</td>
+                  <td class="n-border">Lake Como</td>
+                  <td class="n-border">85.000</td>
                 </tr>
                 <tr>
                   <td>India</td>
