--- a/index.html
+++ b/index.html
@@ -342,6 +342,8 @@
                   type="email"
                   class="subscribe-input"
                   placeholder="Your email"
+                  maxlength="30"
+                  
                 />
               </form>
               <button type="submit" class="subscribe-button">
