--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           <div class="footer-links">
             <div class="footer-column">
               <h3 class="footer-heading p-500">About</h3>
-              <ul class="footer-menu">
+              <ul class="no-wrap">
                 <li><a href="#" class="footer-link">About Us</a></li>
                 <li><a href="#" class="footer-link">Features</a></li>
                 <li><a href="#" class="footer-link">News</a></li>
@@ -314,7 +314,7 @@
             </div>
             <div class="footer-column">
               <h3 class="footer-heading p-500">Company</h3>
-              <ul class="footer-menu">
+              <ul class="no-wrap">
                 <li><a href="#" class="footer-link">Why 2rism</a></li>
                 <li><a href="#" class="footer-link">Partner With Us</a></li>
                 <li><a href="#" class="footer-link">FAQ</a></li>
@@ -323,7 +323,7 @@
             </div>
             <div class="footer-column">
               <h3 class="footer-heading p-500">Support</h3>
-              <ul class="footer-menu">
+              <ul class="no-wrap">
                 <li><a href="#" class="footer-link">Account</a></li>
                 <li><a href="#" class="footer-link">Support Center</a></li>
                 <li><a href="#" class="footer-link">Feedback</a></li>
@@ -343,7 +343,6 @@
                   class="subscribe-input"
                   placeholder="Your email"
                   maxlength="30"
-                  
                 />
               </form>
               <button type="submit" class="subscribe-button">
